--- a/syndishanx_rtm_tool/App.xaml
+++ b/syndishanx_rtm_tool/App.xaml
@@ -1,9 +1,6 @@
-﻿<Application x:Class="SuperAwesomeBO6Tool.App"
+﻿<Application x:Class="syndishanx_rtm_tool.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SuperAwesomeBO6Tool"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+    <Application.Resources></Application.Resources>
 </Application>
